--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.podkopaev</groupId>
   <artifactId>cftTest</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>cftTest</name>
   <url>http://maven.apache.org</url>
   <dependencies>
